# NexaRoute

./: README.md
SmartRouteOptimizer/: CMakeLists.txt  README.md  START_HERE.md  SmartRouteOptimizer.sln
SmartRouteOptimizer/backend/: SmartRouteOptimizer.vcxproj  SmartRouteOptimizer.vcxproj.filters
SmartRouteOptimizer/backend/include/: AVLTree.h  AnalyticsService.h  AuthService.h  BinarySearch.h  CircularQueue.h  DeliverySystem.h  DoublyLinkedList.h  DynamicArray.h  Graph.h  HashTable.h  LocalServer.h  MinHeap.h  NetworkManager.h  Queue.h  RouteEngine.h  Security.h  SinglyLinkedList.h  Stack.h  Validation.h
SmartRouteOptimizer/backend/src/: AnalyticsService.cpp  AuthService.cpp  DeliverySystem.cpp  Graph.cpp  LocalServer.cpp  NetworkManager.cpp  RouteEngine.cpp  Security.cpp  Validation.cpp  main.cpp
SmartRouteOptimizer/data/: locations.csv  riders.csv  roads.csv
SmartRouteOptimizer/data/runtime/: accounts.db  auth_audit.db  bookings.db  history.db  network_audit.db  riders.db
SmartRouteOptimizer/docs/: LANGUAGE_REPORT.md  STEP_01_BLUEPRINT.md  STEP_02_VISUAL_STUDIO_FOUNDATION.md  STEP_03_ROUTE_ENGINE.md  STEP_04_DELIVERY_SYSTEM.md  STEP_05_INTERFACE_AND_ADMIN.md  STEP_06_TESTING_AND_SETUP.md  VIVA_GUIDE.md  VSCODE_WINDOWS_SETUP.md
SmartRouteOptimizer/frontend/: app.js  index.html  style.css
SmartRouteOptimizer/scripts/: smoke_test.sh  test_auth_network.sh  test_delivery.sh  test_rider_feedback.sh  test_routes.sh
SmartRouteOptimizer/tests/: auth_network_tests.cpp  delivery_system_tests.cpp  rider_feedback_tests.cpp  route_engine_tests.cpp
